Izmijenio footer (text).

--- a/css/jquery.mobile-1.4.5.css
+++ b/css/jquery.mobile-1.4.5.css
@@ -1472,7 +1472,9 @@ div.ui-mobile-viewport {
 }
 .ui-header .ui-title,
 .ui-footer .ui-title {
-	font-size: 1em;
+    font-size: 13px;
+    font-weight: normal;
+    text-decoration:none;
 	min-height: 1.1em;
 	text-align: center;
 	display: block;
@@ -4720,4 +4722,7 @@ html .ui-popup .ui-field-contain > label + .ui-flipswitch {
 }
 p{
     padding:5px;
+}
+span{
+    color: #6c1b78;
 }
